--- a/index.html
+++ b/index.html
@@ -10,23 +10,33 @@
 </head>
 
 <body>
-
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h1 class="display-2">Belly Button Biodiversity Dashboard </h1>
+        <!-- <p>Use the interactive charts below to explore the dataset</p> -->
+
+        <!-- CUSTOMIZATION #1 -->
+        <p class="text-info">Use the interactive charts below to explore the dataset</p>
+
+        <!-- CUSTOMIZATION #2 -->
+          <div class="col-md-4">
+            <img class="img-responsive" style="max-width:60%;" src="bacteria.png" />
+          </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2">
-        <div class="well">
+        <div class="well" style="background-color:gold;">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
+
         </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
+
+        <!-- CUSTOMIZATION #3 -->
+        <div class="panel panel-default">
+          <div class="panel-heading" style="background-color:gold;">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
